Fixed scrollbar showing up on mobile devices

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ html, .product-list {
 
 /* WebKit */
 body::-webkit-scrollbar, .product-list::-webkit-scrollbar{
+    -webkit-appearance: none;
     display: none;
     width: 0 !important;
 }
